--- a/server_software/web_server/index.html
+++ b/server_software/web_server/index.html
@@ -282,7 +282,7 @@ function bodyOnLoad()
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#top">Vrh</a>
+					<a class="navbar-brand" href="#top">Top</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
