Add link to raw results directory

--- a/server_software/web_server/index.html
+++ b/server_software/web_server/index.html
@@ -291,6 +291,9 @@ function bodyOnLoad()
 					<a href="#TIV">Temperature</a>
 					</li>
 					<li>
+					<a href="./results/">Raw Results</a>
+					</li>
+					<li>
 					<a href="#contact">Contact</a>
 					</li>
 					<li class="dropdown">
