--- a/server_software/web_server/index.html
+++ b/server_software/web_server/index.html
@@ -256,8 +256,8 @@ function draw_graphs(container_id, graphs, line_labels, title, value_axis_title,
   */
 function bodyOnLoad()
 {
-	var temperature_inputs = ["t1", "t2"];
-	var line_labels = ["T1", "T2"];
+	var temperature_inputs = ["t1", "t2", "set"];
+	var line_labels = ["T1", "T2", "set"];
 	draw_graphs("temperature", temperature_inputs, line_labels, 'Temperature Sensors', "T [C]", true);
 
 	//var humidity_inputs = ["paprika_hum", "benjamin_hum" ];
