Change sensor name to ts instead of set

--- a/server_software/web_server/index.html
+++ b/server_software/web_server/index.html
@@ -256,7 +256,7 @@ function draw_graphs(container_id, graphs, line_labels, title, value_axis_title,
   */
 function bodyOnLoad()
 {
-	var temperature_inputs = ["t1", "t2", "set"];
+	var temperature_inputs = ["t1", "t2", "ts"];
 	var line_labels = ["T1", "T2", "set"];
 	draw_graphs("temperature", temperature_inputs, line_labels, 'Temperature Sensors', "T [C]", true);
 
