Take into account seconds as well
When creating date, seconds were rounded so agregated graphs do not have discontinuitis. This
broke situation when sample rate was less then 1 minute

--- a/server_software/web_server/index.html
+++ b/server_software/web_server/index.html
@@ -112,7 +112,7 @@ function parse_date(datestring)
 	explode_time = time.split(":");
 	hour = explode_time[0];
 	minute = explode_time[1];
-	second = 0;
+	second = explode_time[2];
 
 	return new Date(year, month-1, day, hour, minute, second);
 }
