Change to english (datum -> date)

--- a/webapp/beermon/index.html
+++ b/webapp/beermon/index.html
@@ -242,7 +242,7 @@ function draw_graphs(container_id, graphs, line_labels, title, value_axis_title,
 		legend: { position: 'none' },
 		explorer : {},
 		hAxis: {
-			title: 'Datum'
+			title: 'Date'
 			},
 		vAxis: {
 			title: value_axis_title
