Fix label on table

--- a/webapp/beermon/index.html
+++ b/webapp/beermon/index.html
@@ -288,8 +288,8 @@ function GraphContainer(container_id,
 	{
 		var min_max_table = '<table class="table table-hover table-condensed"><caption>'+ 
 				title +
-				'</caption><thead><tr><th>Board</th><th>Minimum Value (PS_LFS_OS)'+
-				'</th><th>Maximum Value (PS_LFS_OS)</th></tr></thead><tbody>';
+				'</caption><thead><tr><th>Board</th><th>Minimum Value (Date)'+
+				'</th><th>Maximum Value (Date)</th></tr></thead><tbody>';
 
 		for (var i = 0; i < this.graph_data.length; i++) {
 			if (i % 2)
